style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
li {
    font-family: "Roboto", sans-serif;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    color: #000000;
}

body {
    background-color: #f7f8fc;
}

.container {
    width: min(100% - 2rem, 1200px);
    margin-inline: auto;
}

.hero {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.hero__info {
    width: 100%;
}

.hero__title {
    font-size: 3rem;
    margin-bottom: 3rem;
    margin-top: 3rem;
}

.content {
    font-size: 1rem;
    margin-bottom: 1rem;
}

.hero__titles {
    display: flex;
    gap: 12px;
    margin-bottom: 2rem;
}

.hero__titles li {
    font-size: 10px;
    background-color: #eeeeee;
    padding: 0.5rem;
    border-radius: 10px;
}

.hero__contact {
    background-color: #000000;
    color: #ffffff;
    padding: 0.8rem 1rem;
    border-radius: 20px;
    border: none;
    width: 100%;
    font-size: 1rem;
    display: block;
    text-align: center;
}

.hero__picture {
    margin-top: 2rem;
    display: grid;
    place-items: center;
    width: 100%;
}

.hero__profile {
    width: 300px;
    height: 300px;
    border-radius: 50%;
    overflow: hidden;
}

.hero__profile__img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.about {
    margin-top: 1.5rem;
    box-shadow: 0px 0px 15px -3px rgba(0, 0, 0, 0.1);
    padding: 1rem;
    border-radius: 20px;
}

.about__title {
    margin-top: 2rem;
}

.projects {
    margin-top: 2rem;
}

.projects__grid {
    margin-top: 1.5rem;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    gap: 1rem;
}

.projects__card {
    box-shadow: 0px 0px 15px -3px rgba(0, 0, 0, 0.1);
    padding: 1rem;
    border-radius: 20px;
}

.projects__card__background {
    width: 100%;
    height: 200px;
    border-radius: 8px;
    overflow: hidden;
}

.projects__card__picture {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.projects__card__title {
    font-weight: 300;
    font-size: 1.2rem;
    margin-top: 0.5rem;
}

.languages__title {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
}

.languages__container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    gap: 1rem;
}

.languages__card {
    box-shadow: 0px 0px 15px -3px rgba(0, 0, 0, 0.1);
    padding: 1.2rem;
    border-radius: 20px;
}

.languages__tech {
    font-weight: 400;
    text-align: center;
    font-size: 1.3rem;
}

.languages__stack {
    margin-top: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
}

.experience__title {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
}

.experience__container {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.experience__card {
    box-shadow: 0px 0px 15px -3px rgba(0, 0, 0, 0.1);
    padding: 1.2rem;
    border-radius: 20px;
}

.experience__company {
    color: #777777;
    margin: 5px 0;
}

.experience__card__header {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
}

.footer {
    margin-top: 2rem;
    background-color: #000000;
    height: 150px;
}

.footer__contact {
    padding-top: 1.5rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.footer__contact a {
    color: #eeeeee;
}

.footer__contact__element {
    display: flex;
    gap: 1rem;
    align-items: center;
}

@media only screen and (min-width: 768px) {
    .hero {
        flex-direction: row;
    }

    .hero__contact {
        padding: 0.7rem 2.5rem;
        display: inline;
    }
}

